New attributes for TTL Gates, code fix and moved to Eclipse Oxygen